--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
         </div>
                 <div class="wrapper">
-                    <a href=""><img src="images/23.gif"></a>
+                    <a href="история%20создания.html"><img src="images/23.gif"></a>
                 </div>
     </div>
 
