--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
                     <div class="layer2">
                         <div class="wrapper">
-                            <img src="images/11.png" alt="Фотография 1">
+                            <img src="images/11.webp" alt="Фотография 1">
                         </div>
                         <article>
                             <p align="justify">Java представляет собой язык программирования и платформу вычислений, которая была впервые выпущена Sun Microsystems в 1995 г. Существует множество приложений и веб-сайтов, которые не работают при отсутствии установленной Java, и с каждым днем число таких веб-сайтов и приложений увеличивается. Java отличается быстротой, высоким уровнем защиты и надежностью. От портативных компьютеров до центров данных, от игровых консолей до суперкомпьютеров, используемых для научных разработок, от сотовых телефонов до сети Интернет — Java повсюду!</p>
