--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <title>Java</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="yandex-verification" content="6ca14edbaccbfa8f" />
     <link rel="stylesheet" href="Bootstr.css">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" type="text/css" href="obratsvyaz.css">
