--- a/index.html
+++ b/index.html
@@ -97,4 +97,6 @@
 
 
 
-</font></font></body></html>
+</font></font>
+    <footer><a href="https://webmaster.yandex.ru/siteinfo/?site=https://off-site-pairs.000webhostapp.com"><img width="88" height="31" alt="" border="0" src="https://yandex.ru/cycounter?https://off-site-pairs.000webhostapp.com&theme=light&lang=ru"/></a></footer>
+    </body></html>
