--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="obratsvyaz.css">
     <script src="js.js"></script>
     <script src="js2.js"></script>
-
+    <div style="height: 30px; background: url(https://uguide.ru/js/script/girlianda_uguide_ru_1.gif) repeat-x 100%;"></div>
 </head><body style="zoom: 1;"><div class="container-fluid">
     <div class="row">
         <div class="col-md-12">
