--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                             <p align="justify">Java представляет собой язык программирования и платформу вычислений, которая была впервые выпущена Sun Microsystems в 1995 г. Существует множество приложений и веб-сайтов, которые не работают при отсутствии установленной Java, и с каждым днем число таких веб-сайтов и приложений увеличивается. Java отличается быстротой, высоким уровнем защиты и надежностью. От портативных компьютеров до центров данных, от игровых консолей до суперкомпьютеров, используемых для научных разработок, от сотовых телефонов до сети Интернет — Java повсюду!</p>
                         </article>
                         <div class="button-container" height="600">
-                            <a href="https://ru.wikipadia.org/wiki/Java" class="btn-gr"><span>Узнай больше<span></span></span></a>
+                            <a href="https://ru.wikipedia.org/wiki/Java" class="btn-gr"><span>Узнай больше<span></span></span></a>
                         </div>
 
 
