--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" type="text/css" href="obratsvyaz.css">
 
-    <script src="js2.js"></script>
+    <script src="js.js"></script>
 </head><body style="zoom: 1;"><div class="container-fluid">
     <div class="row">
         <div class="col-md-12">
